    - map is now zoomable through mouse wheel
    - map can now be dragged around
    - a map overview was implemented to ease the use on smaller screens
- added custom elements for poi's
    - poi's now have different looks
    - improved tooltips for map
- added improved settings system
- added custom elements for song view and editor
- added custom elements for shop view and editor
- added custom elements for gossipstones
- switch for child/adult/both era added
- added setting to decide, if an unknown dungeon type means both types are required, or just one of them
- remaining chests / skulltulas now count min and max values if a dungeon is not defined

[UTILS]
- added event bus for communication between modules
- added module for global data storage (all tracker data goes here)
- added module for savestates (well, save away)
- added language handler
- rewrite logic system to compensate for unknown states of dungeons (v/mq)
- new serviceworker added

also improved system stability to enhance user experience


[WIP]
- add logic to gossipstones
- implement layout manager
- rework logic

[TODO]

= prio 2 =
- custom layout (aka build yourself a tracker)
- implement settings for dungeon status

= prio 3 =
- reimplement logic editor
- add optimization for lists
    - dont create/delete all the elements all the time! cache them! memory is not an issue...
        - could add a element index to store unused elements instead of deleting them. so the garbage collector can chill
    - buffer logic checks, update on item update
        - restructure events, item changed ==> logic update -> logic changed ==> location update
        - bundle events into a single one
    - maybe analize logic to check what item changes whitch logic


== REQUESTS ==

- optionally increase skully token count with ticking off skullies

- add remote control system
    possible solutions
    - host remote server for websocket solution
    - 

- add tooltips to all the icons