@@ -307,8 +307,7 @@
             "lonlon_tree_child_night": {
                 "x": "49.0%",
                 "y": "38.0%",
-                "era": "child",
-                "time": "night"
+                "era": "child"
             },
             "lonlon_paddock_fence_child_night": {
                 "x": "49.0%",
