@@ -63,6 +63,7 @@ also improved system stability to enhance user experience
 - add logic to gossipstones
 - implement layout manager
 - rework logic
+- load custom logic on window focus & checkbox tick
 
 [TODO]
 
